--- a/package.json
+++ b/package.json
@@ -18,38 +18,36 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "clean": "gatsby clean"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "gatsby": "^2.24.37",
-    "gatsby-image": "^2.4.14",
-    "gatsby-plugin-manifest": "^2.4.22",
-    "gatsby-plugin-offline": "^3.2.22",
+    "gatsby": "^2.24.51",
+    "gatsby-image": "^2.4.16",
+    "gatsby-plugin-manifest": "^2.4.25",
+    "gatsby-plugin-offline": "^3.2.25",
     "gatsby-plugin-postcss": "^2.3.11",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sharp": "^2.6.25",
+    "gatsby-plugin-sharp": "^2.6.29",
     "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-source-filesystem": "^2.3.24",
-    "gatsby-transformer-sharp": "^2.5.12",
+    "gatsby-source-filesystem": "^2.3.26",
+    "gatsby-transformer-sharp": "^2.5.13",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
-    "tailwindcss": "^1.6.2"
+    "tailwindcss": "^1.7.5"
   },
   "devDependencies": {
-    "prettier": "^2.0.5"
+    "prettier": "^2.1.1"
   },
   "prettier": {
     "endOfLine": "lf",
