Moved email to icon, cleanup subtitle

--- a/content.yaml
+++ b/content.yaml
@@ -3,7 +3,7 @@ about:
   lastName: Aperance
   address: Las Vegas, Nevada
   email: aperance@gmail.com
-  description: Entry level full stack developer skilled in Node.js, React, and Redux.
+  description: Full Stack Web Developer
   github: https://github.com/aperance
   linkedin: https://linkedin.com/in/aperance
 
